== (In Git)

=== New Features
* An explanation of why failures are ok is printed when --wip is used. (Aslak Hellesøy)
* Added cucumber alias for cucumber:ok in Rails Rake tasks. (Aslak Hellesøy)

=== Bug Fixes
* Resolved infinite loop problem when --drb was defined in a profile. (#408 Ben Mabey)
* --langauge picked up from profiles again. (#409 Ben Mabey)
* --drb degrades gracefuly when no drb server is running and no formatter is provided. (#410 Ben Mabey)

== 0.3.94 2009-08-06

Kanban take II.

Release 0.3.6 introduced a new --wip switch that can be used to limit work in progress
(WIP). Limiting WIP is central for Kanban Software Development (http://www.infoq.com/articles/hiranabe-lean-agile-kanban).

However, this feature went mostly unnoticed, and because we think it's so great we have decided
to make it the default for Rails projects. When you bootstrap your Rails project for Cucumber
you will now get 2 Cucumber Rake tasks for Kanban development:

  cucumber:ok  : Run features that should pass. This runs your "good,old" features
  cucumber:wip : Run the features you're working on that don't pass yet. Tag them with @wip. Max 2!

So upgrade today and get into the habit of tagging new features with @wip (or invent your own tags).
You'll achieve better flow this way.

=== New features
* Support limiting the number of feature elements with certain tags (#353 Joseph Wilk) 
* script/generate cucumber sets up 'cucumber:ok' and 'cucumber:wip' tasks and deprecates 'features'. More Kanban love. (#344 Aslak Hellesøy)
* Better JUnit formatter: feature->testsuite, scenario->testcase. Better timing and support for background and scenario outline. (Mads Buus Westmark)
* Added examples/python that uses rubypython. (Aslak Hellesøy)
* Checks the number of available colors on the terminal with ruby-terminfo if ruby-terminfo is installed.
  This prevents Apple's Terminal.app from stalling (Yugui - Yuki Sonoda).
  * Set 'xterm-256color' to TERM if your terminal supports grey.